[project]
name = "llmdrive"
version = "0.0.1"
description = "Cross-LLM memory portability tool — user-owned context vault across Claude, ChatGPT, Gemini, and Ollama"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Benjamin Geller"}]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/BenjaminGeller/llmdrive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"